--- a/.env.exemplo
+++ b/.env.exemplo
@@ -2,12 +2,13 @@
 # Copie o conteúdo deste arquivo para um arquivo chamado .env e
 # preencha as variáveis de ambiente com os valores corretos.
 
-MODE=DEVELOPMENT  # DEVELOPMENT, PRODUCTION, MIGRATE
-DEBUG=True
+MODE=MIGRATE  # DEVELOPMENT, PRODUCTION, MIGRATE
+DEBUG=False
 WEB_CONCURRENCY=4
-SECRET_KEY=django_insecure_gere_uma_chave_secreta
-# DATABASE_URL=[database_url]
-CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
+SECRET_KEY=#!yx33!h2imp5uo2t*yr^y*)1t^x!+ms0-+4s5lsw45bd5sxy3
+# DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.lknbayxhjxlrifkpumku.supabase.co:5432/postgres
+CLOUDINARY_URL=cloudinary://438816712347321:E5YxzU-08EjWOY9iUD2H8p4J96s@djof9ukoz
 PASSAGE_APP_ID=THE_APP_ID_PROVIDED_BY_PASSAGE
 PASSAGE_API_KEY=THE_API_KEY_PROVIDED_BY_PASSAGE
 MY_IP=127.0.0.1
+
